--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -2,6 +2,7 @@ services:
     apache:
         image: tugboatqa/httpd
         subpath: true
+        domain: "jamescbain.com"
         commands:
             init: ln -snf "${TUGBOAT_ROOT}" "${DOCROOT}"
             build: cat .tugboat/tugboat.txt
